--- a/_posts/Algorithm/2020-12-27-BOJ10814.md
+++ b/_posts/Algorithm/2020-12-27-BOJ10814.md
@@ -12,61 +12,76 @@ last_modified_at: 2020-12-27T15:00:00+09:00
 1. 변수
 
    ```java
-   int N // 숫자의 개수
-   int[] A // A의 숫자들의 집합
-   int[] B // B의 숫자들의 집합
+   class Person{
+       int age;
+       String name;
+   }
+   
+   int N // 회원의 수
+   ArrayList<Person> list; // Person들의 리스트
    ```
 
    
 
 2. 로직
 
-   * A를 오름차순, B를 내림차순으로 정렬(합을 최소값으로 만들기 위해서)
+   * Person을 모두 입력 받은 후, 나이 순 정렬
    
+     * 나이가 같을 경우 먼저 가입한 순서로 정렬
+     
      
    
 3. 코드
 
 ```java
-package com.ssafy;
-
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.StringTokenizer;
 
-public class BOJ_1026_보물 {
+public class Main {
 
-	public static void main(String[] args) throws NumberFormatException, IOException {
+	public static void main(String[] args) throws IOException {
 		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
 		StringTokenizer st;
 		
 		int N = Integer.parseInt(br.readLine());
 		
-		int[] A = new int[N];
-		st = new StringTokenizer(br.readLine());
+		ArrayList<Person> list = new ArrayList<Person>();
 		for (int i = 0; i < N; i++) {
-			A[i] = Integer.parseInt(st.nextToken());
-		}
-		
-		int[] B = new int[N];
-		st = new StringTokenizer(br.readLine());
-		for (int i = 0; i < N; i++) {
-			B[i] = Integer.parseInt(st.nextToken());
+			st = new StringTokenizer(br.readLine());
+			int age = Integer.parseInt(st.nextToken());
+			String name = st.nextToken();
+			list.add(new Person(age, name));
 		}
 
-		Arrays.sort(A);
-		Arrays.sort(B);
-		
-		int ans = 0;
-		for (int i = 0; i < N; i++) {
-			ans += A[i] * B[N - i - 1];
+		Collections.sort(list, new Comparator<Person>() {
+			@Override
+			public int compare(Person o1, Person o2) {
+				return o1.age-o2.age;
+			}
+		});
+		for (int i = 0; i < list.size(); i++) {
+			System.out.println(list.get(i).toString());
 		}
-		System.out.println(ans);
 	}
-
+	
+	static class Person{
+		int age;
+		String name;
+		public Person(int age, String name) {
+			this.age = age;
+			this.name = name;
+		}
+		
+		@Override
+		public String toString() {
+			return this.age + " " + this.name;
+		}
+	}
 }
-
 ```
 
