--- a/_posts/Algorithm/2020-12-27-BOJ5904.md
+++ b/_posts/Algorithm/2020-12-27-BOJ5904.md
@@ -1,28 +1,28 @@
 ---
-title:  BOJ 5212 지구 온난화
-excerpt: BOJ 5212 지구 온난화
+title:  BOJ 5904 Moo 게임
+excerpt: BOJ 5904 Moo 게임
 search: true
 categories: 
-  - ds
+  - recursive
 tags: 
-  - ds
+  - recursive
 last_modified_at: 2020-12-27T15:00:00+09:00
 ---
 
 1. 변수
 
    ```java
-   char[][] map //주어지는 섬의 모양
-   int[] line //출력할 영역 설정
+   int N //출력할 문자의 자리
+   int[] mooLen //moo게임 하는동안 길이 구할수 잇다
    ```
    
    
    
 2. 로직
 
-   * X일 경우 4방향 중에 2방향 이상이 X면 X으로 변경
+   * mooLen 배열을 채운다(최대 10번)
 
-   * 배열의 상하좌우 확인하면서 출력할 영역 설정하기
+   * 재귀를 통해 앞 + 새로 만든 moo + 뒤 중에 위치를 구해 구한다
 
      
 
@@ -34,126 +34,52 @@ package com.ssafy;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
-import java.util.Arrays;
-import java.util.StringTokenizer;
 
-public class BOJ_5212_지구온난화_201229 {
+public class BOJ_5904_Moo게임_201229 {
 
-	public static void main(String[] args) throws IOException {
+	public static void main(String[] args) throws NumberFormatException, IOException {
 		BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
-		StringTokenizer st = new StringTokenizer(br.readLine());
-		
-		int R = Integer.parseInt(st.nextToken());
-		int C = Integer.parseInt(st.nextToken());
-		
-		char[][] map = new char[R][C];
-		char[][] ans = new char[R][C];
-		
-		for (int i = 0; i < R; i++) {
-			char[] c = br.readLine().toCharArray();
-			map[i] = c;
-		}
-		
-		for (int i = 0; i < ans.length; i++) {
-			Arrays.fill(ans[i], '.');
-		}
-		
-		for (int i = 0; i < R; i++) {
-			for (int j = 0; j < C; j++) {
-				if(map[i][j] == 'X')
-					checkSea(i, j, map, ans);
-			}
-		}
-		
-		int[] line = removeLine(ans);
-		
-		for (int i = line[0]; i <= line[1]; i++) {
-			for (int j = line[2]; j <= line[3]; j++) {
-				System.out.print(ans[i][j]);
-			}
-			System.out.println();
-		}
 
-	}
-	
-	private static int[] removeLine(char[][] ans) {
-		int[] line = new int[4];
+		int N = Integer.parseInt(br.readLine());
+
+		int[] mooLen = new int[32];
+
+		int index = calMoolen(mooLen, N);
 		
-		for (int i = 0; i < ans.length; i++) {
-			boolean isSea = true;
-			for (int j = 0; j < ans[i].length; j++) {
-				if(ans[i][j] == 'X') {
-					isSea = false;
-					break;
-				}
-			}
-			if(!isSea) {
-				line[0] = i;
-				break;
-			}
-		}
-		
-		for (int i = ans.length-1; i >= 0; i--) {
-			boolean isSea = true;
-			for (int j = 0; j < ans[i].length; j++) {
-				if(ans[i][j] == 'X') {
-					isSea = false;
-					break;
-				}
-			}
-			if(!isSea) {
-				line[1] = i;
-				break;
-			}
-		}
-		
-		for (int i = 0; i < ans[0].length; i++) {
-			boolean isSea = true;
-			for (int j = 0; j < ans.length; j++) {
-				if(ans[j][i] == 'X') {
-					isSea = false;
-					break;
-				}
-			}
-			if(!isSea) {
-				line[2] = i;
-				break;
-			}
-		}
-		
-		for (int i = ans[0].length -1 ; i >= 0; i--) {
-			boolean isSea = true;
-			for (int j = 0; j < ans.length; j++) {
-				if(ans[j][i] == 'X') {
-					isSea = false;
-					break;
-				}
-			}
-			if(!isSea) {
-				line[3] = i;
-				break;
-			}
-		}
-		return line;
+		System.out.println(dfs(index, N, mooLen));
 	}
 
-	static int[] dr = {-1, 1, 0, 0};
-	static int[] dc = {0, 0, -1, 1};
-
-	private static void checkSea(int x, int y, char[][] map, char[][] ans) {
-		int cnt = 0;
-		for (int i = 0; i < dr.length; i++) {
-			int nx = x + dr[i];
-			int ny = y + dc[i];
-			if(nx <0 || ny < 0 || nx >= map.length || ny >= map[nx].length) continue;
-			if(map[nx][ny] == 'X')
-				cnt++;
+	private static String dfs(int index, int n, int[] mooLen) {
+		if(index == 0) {
+			if(n == 1)
+				return "m";
+			else
+				return "o";
 		}
-		if(cnt > 1)
-			ans[x][y] = 'X';
+		
+		if(mooLen[index-1] >= n)
+			return dfs(index-1, n, mooLen);
+		else if(mooLen[index-1] + index + 3 >= n) {
+			if(n == mooLen[index-1] + 1)
+				return "m";
+			else
+				return "o";
+		}else {
+			return dfs(index-1, n-(mooLen[index-1] + index + 3), mooLen);
+		}
+		
+	}
+
+	private static int calMoolen(int[] mooLen, int n) {
+		mooLen[0] = 3;
+		for (int i = 1; i < mooLen.length; i++) {
+			mooLen[i] = mooLen[i - 1] * 2 + (i + 3);
+			if(mooLen[i] > n)
+				return i;
+		}
+		return mooLen.length;
 	}
 
 }
-
 ```
 
