--- a/_posts/Sql/2021-01-01-sql-basic2.md
+++ b/_posts/Sql/2021-01-01-sql-basic2.md
@@ -1,6 +1,6 @@
 ---
-title:  SQL 개념 정리(SELECT)
-excerpt: SQL 개념 정리(SELECT)
+title:  SQL 개념 정리(SUM, MAX, MIN, COUNT)
+excerpt: SQL 개념 정리(SUM, MAX, MIN, COUNT)
 search: true
 categories: 
   - sql
