--- a/_posts/Sql/2020-12-30-sql-basic1.md
+++ b/_posts/Sql/2020-12-30-sql-basic1.md
@@ -1,6 +1,6 @@
 ---
-title:  SQL 개념 정리(SELECT)
-excerpt: SQL 개념 정리(SELECT)
+title:  SQL 문제 풀이(SELECT)
+excerpt: SQL 문제 풀이(SELECT)
 search: true
 categories: 
   - sql
