--- a/_posts/Sql/2021-01-02-sql-basic3.md
+++ b/_posts/Sql/2021-01-02-sql-basic3.md
@@ -1,6 +1,6 @@
 ---
-title:  SQL 개념 정리(IS NULL)
-excerpt: SQL 개념 정리(IS NULL)
+title:  SQL 문제 풀이(IS NULL)
+excerpt: SQL 문제 풀이(IS NULL)
 search: true
 categories: 
   - sql
