--- a/_posts/Algorithm/2021-01-06-BOJ2503.md
+++ b/_posts/Algorithm/2021-01-06-BOJ2503.md
@@ -1,27 +1,28 @@
 ---
-title:  BOJ 1439 뒤집기
-excerpt: BOJ 1439 뒤집기
+title:  BOJ 2503 숫자 야구
+excerpt: BOJ 2503 숫자 야구
 search: true
 categories: 
-  - greedy
+  - bf
 tags: 
-  - greedy
+  - bf
 last_modified_at: 2021-01-05T15:00:00+09:00
 ---
 
 1. 변수
 
    ```java
-   String S; //주어지는 문자열
-   int cnt; //바뀌는 횟수
+   char[][] gameNum; //민혁이가 맞추는 숫자들을 담는 배열
    ```
    
    
    
 2. 로직
 
-   * 한칸씩 확인하면서 0->1로 1->0으로 바뀌는 횟수 카운트
+   * 모든 숫자들을 확인
 
+     * (N * 9 * 8 * 7 * 9 가 최대이기에 충분히 다 돌릴수 있다.)
+     
      
 
 3. 코드
