--- a/_posts/Web/Spring/2021-01-12-spring.md
+++ b/_posts/Web/Spring/2021-01-12-spring.md
@@ -3,9 +3,9 @@ title:  Spring 개념 정리
 excerpt: Spring 개념 정리
 search: true
 categories: 
-  - Spring
+  - spring
 tags: 
-  - Spring
+  - spring
 last_modified_at: 2020-12-23T19:00:00+09:00
 ---
 
