post name update

--- a/_posts/Web/Spring/2021-01-14-post.md
+++ b/_posts/Web/Spring/2021-01-14-post.md
@@ -1,6 +1,6 @@
 ---
-title:  Spring 개념 정리
-excerpt: Spring 개념 정리
+title:  POJO vs BEAN
+excerpt: POJO vs BEAN
 search: true
 categories: 
   - spring
