--- a/_posts/Web/Spring/2021-01-12-spring.md
+++ b/_posts/Web/Spring/2021-01-12-spring.md
@@ -16,3 +16,10 @@ last_modified_at: 2021-01-14T19:00:00+09:00
   자바(Java) 플랫폼을 위한 오픈 소스 어플리케이션 프레임워크이다. 자바 개발을 위한 프레임워크로 종속 객체를 생성해주고, 조립해주는 역할을 맡는다. 
   
 - Spring을 공부하려니 POJO와 BEAN의 내용을 좀 더 잘 알아야겠어서 해당 부분부터 공부 후, 정리 하겠다.
+
+
+
+### DI(Dependency Injection)
+
+- 의존 주입 : 객체간 의존 관계를 객체 스스로가 하는것이 아닌 외부 조립기가 해준다는 개념
+
